# 42sh

./: .gitignore  Makefile.am  README.md  configure.ac  ok.sh  rec.sh  redirchetor.sh  te.sh  test.c  test.sh  timwrong.sh
.github/worflows/: build.yml
.github/workflows/: build.yml
my-redir/: my_redir.c
mypipe/: mypipe.c
src/: Makefile.am  debug.c  finder.c  finder.h  main.c
src/arg_parser/: Makefile.am  arg_parser.c  arg_parser.h
src/arg_saver/: Makefile.am  arg_saver.c  arg_saver.h
src/ast/: ast.c  ast.h  ast_utils.c  ast_utils.h
src/env/: Makefile.am  context.c  context.h  env.c  env.h
src/env/vars/: spec_vars.c  spec_vars.h  specials.c  specials.h  var_dict.c  var_dict.h  vars.c  vars.h
src/exec/: Makefile.am  exec_and_or.c  exec_case.c  exec_commands.c  exec_condition.c  exec_echo.c  exec_echo.h  exec_entry.c  exec_for.c  exec_list.c  exec_loop.c  exec_pipe.c  exec_store_funct.c  exec_until.c  exec_while.c  execs.h
src/exec/builtins/: builtins.h  cd.c  continue_break.c  dot.c  echo.c  exit.c  export.c  path_utils.c  path_utils.h  unset.c
src/exec/commands/: exec_commands.c  exec_pipe.c  exec_sh_cmd.c  exec_subshell.c  execs_cmd.h
src/exec/redirs/: redirs.c  redirs.h
src/exit/: Makefile.am  clean.c  error_handler.c  error_handler.h  exit.h
src/finder/: Makefile.am  finder.c  finder.h
src/io_backend/: Makefile.am  backend_saver.c  backend_saver.h  io_backend_file.c  io_streamers.c  io_streamers.h
src/lexer/: Makefile.am  finder.c  finder.h  lexer_tools.c  lexer_tools.h  token_saver.c  token_saver.h  tokenizer.c  tokenizer.h
src/lexer/finder/: finder.c  finder.h  finder_operator.c  finder_tools.c  finder_tools.h
src/parser/: Makefile.am
src/parser/command/: arg_list.c  arg_list.h  args.c  args.h  expander.c  expander.h  expansion.c  expansion.h  stringify.c
src/parser/grammar/: gr_and_or.c  gr_case.c  gr_command.c  gr_compound_list.c  gr_cond.c  gr_element.c  gr_else.c  gr_entry.c  gr_for.c  gr_function.c  gr_if.c  gr_input.c  gr_list.c  gr_loops.c  gr_pipeline.c  gr_prefix.c  gr_redir.c  gr_shell_cmd.c  gr_simple_command.c  gr_until.c  gr_while.c  rules.h
src/parser/grammar/gr_case/: gr_case.c  gr_case_clause.c  gr_case_item.c
src/parser/grules/: grcond.c  grelement.c  grentry.c  grules.h  grword.c
src/parser/tools/: gr_tools.c  gr_tools.h  gr_utils.c  gr_utils.h  redirection.c  redirection.h
src/token/: Makefile.am  token.c  token.h
src/tools/: Makefile.am  definitions.h  pretty_printer.c  pretty_printer.h
src/tools/assignment/: assignment.c  assignment.h
src/tools/ast/: ast.c  ast.h  ast_utils.c  ast_utils.h
src/tools/fd_manager/: fd_dictionary.c  fd_dictionnary.h  fd_manager.h
src/tools/funct_dict/: funct_dict.c  funct_dict.h
src/tools/funct_manager/: funct_dict.c  funct_dict.h
src/tools/pretty_print/: pretty_print.c  pretty_print.h
src/tools/pretty_printer/: pretty_printer.c  pretty_printer.h
src/tools/redirection/: redirection.c  redirection.h
src/tools/ring_buffer/: ring_buffer.c  ring_buffer.h
src/tools/str/: string.c  string.h
src/tools/token/: token.c  token.h
src/tools/var_dict/: var_dict.c  var_dict.h
tests/: Makefile.am  push_check.sh
tests/funct/: Makefile.am  clang.sh  hguards.sh  huge.sh  ignore.sh  io.sh  launch.sh  tests.sh  utils.sh
tests/funct/io/: basics.sh
tests/funct/scripts/: echo_huge.sh
tests/funct/tests/: and_or.sh  args.sh  case.sh  cd.sh  cmd_subs.sh  comments.sh  continue_break.sh  dot.sh  echo.sh  echo_huge.sh  errors.sh  exec.sh  exit.sh  expansion.sh  export.sh  for.sh  function.sh  functions.sh  if.sh  if_huge.sh  ifs.sh  negate.sh  pipes.sh  redirs.sh  simple.sh  simple_quotes.sh  subshells.sh  test.sh  unset.sh  valid_corners.sh  variables.sh  whl_utl.sh
tests/unit/: Makefile.am
tests/unit/exec/: unit_exec.c  unit_redirs.c
tests/unit/fd_manager/: unit_dict.c
tests/unit/finder/: test_finder.c
tests/unit/io_backend/: backend_saver.c  streamers.c  unit_backend_saver.c  unit_streamers.c
tests/unit/lexer/: unit_finder.c  unit_token_saver.c  unit_tokenizer.c
tests/unit/parser/finder/: unit_finder.c
tests/unit/parser/grules/: unit_easy.c
tests/unit/token/: unit_token.c
tests/unit/tools/: pretty_printer.c  unit_pretty_printer.c
