AC_INIT([42sh], [1.0], [florian.laine@epita.fr])
AM_INIT_AUTOMAKE([subdir-objects foreign])
AC_PROG_CC
AM_PROG_AR
AC_PROG_RANLIB
# AX_COMPILER_FLAGS([], [], [], [-Wall -Wextra -Werror -Wvla -std=c99 -pedantic])
AC_CONFIG_FILES([
   Makefile
   src/io_backend/Makefile
   tests/unit/Makefile
])
AC_OUTPUT
