lib_LIBRARIES = liblexer.a

liblexer_a_SOURCES = \
	token_saver.c token_saver.h\
	tokenizer.c tokenizer.h\
	finder/finder_tools.c finder/finder_tools.h\
	finder/finder_operator.c finder/finder_operator.h\
	finder/finder.c finder/finder.h
liblexer_a_CPPFLAGS = -I$(top_srcdir)/src
liblexer_a_CFLAGS = $(CFLAGS_42SH)
